# Rating-Systems

./: CMakeLists.txt  README.md  main.cpp
elo/: elo.hpp
glicko/: rating.hpp
sciplot/: Plot.hpp  Plot3D.hpp  PlotBase.hpp  Utils.hpp  sciplot.hpp
trueskill/: trueskill.cpp  trueskill.h
